# cloud-sec-architect-8b

./: .env.example  .gitignore  .pre-commit-config.yaml  1_harvest_data.py  2_train.py  3_evaluate.py  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DATASET_CARD.md  FAQ.md  IMPROVEMENTS_SUMMARY.md  MODEL_CARD.md  PRODUCTION_READINESS_REVIEW.md  README.md  SECURITY.md  config_validation.py  demo.py  evaluate.py  harvest_data.py  pyproject.toml  requirements-flexible.txt  requirements.txt  train.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.huggingface/: config.yaml
config/: training_config.yaml
data/: clean_training_data.jsonl
scripts/: inference.py  upload_to_hub.py
tests/: test_config.py  test_harvester.py
